--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
   text-decoration: none;
   font-family: Futura, Verdana, sans-serif;
   color:  #6b6b6b;
+  border: solid 1px #5b5b5b;
     
 }
 
