--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background: url(https://unsplash.com/?photo=BL1ipcOKmmE) no-repeat center center fixed; 
+background: url(http://vanityfuengirola.com/wp-content/uploads/2016/06/runners-high.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
